# Quart-SocketIO

./: .gitignore  CHANGES.md  README.md  main.py  poetry.toml  pyproject.toml  pyrightconfig.json  ruff.toml  test.py  test_socketio.py
.github/: copilot-commit-message-instructions.md  copilot-instructions.md
.github/instructions/: doc-javascript.instructions.md  doc-python.instructions.md  pythondocs.instructions.md
docs/: conf.py
example/: app.py  app_namespace.py  sessions.py
flask_socketio/: __init__.py  _manager.py  _middleare.py  test_client.py
quart_socketio/: __init__.py  _core.py  _hypercorn.py  _manager.py  _middleare.py  _namespace.py  _utils.py  _uvicorn.py  config.py  core.py  main.py  middleare.py  namespace.py  test_client.py
quart_socketio/common/: exceptions.py
quart_socketio/typing/: __init__.py  _classes.py  _config.py  _quart.py  _types.py
src/flask_socketio/: __init__.py
src/quart_socketio/: __init__.py  _core.py  _hypercorn.py  _manager.py  _middleare.py  _namespace.py  _types.py  _utils.py  _uvicorn.py  config.py  core.py
src/quart_socketio/config/: python_socketio.py  quart_socketio.py
src/quart_socketio/wrappers/: request.py
