[project]
name = "Flask-SocketIO"
version = "1.0.0"
authors = [{ name = "Miguel Grinberg", email = "miguel.grinberg@gmail.com" }]
description = "Socket.IO integration for Flask applications"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = ["quart", "python-socketio >= 5.12.0", "quart-login @ git+https://github.com/0000matteo0000/quart-login.git", "uvicorn (>=0.34.3,<0.35.0)"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/miguelgrinberg/flask-socketio"
"Bug Tracker" = "https://github.com/miguelgrinberg/flask-socketio/issues"

[project.optional-dependencies]
docs = ["sphinx"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


[tool.poetry.group.dev.dependencies]
quart-session = ">=3.0.0,<4.0.0"
hypercorn = "^0.17.3"

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"
