[project]
name = "Quart-SocketIO"
version = "1.0.2.post8.dev1"
authors = [
    { name = "Nicholas Silva", email = "nicholas@robotz.dev" },
    { name = "Miguel Grinberg", email = "miguel.grinberg@gmail.com" },
]
description = "Async Socket.IO integration for Quart applications"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "quart",
    "python-socketio >= 5.12.0",
    "uvicorn (>=0.34.3,<0.35.0)",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/Robotz213/Quart-SocketIO"
"Bug Tracker" = "https://github.com/Robotz213/Quart-SocketIO/issues"

[project.optional-dependencies]
docs = ["sphinx"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


[tool.poetry.group.dev.dependencies]
quart-session = ">=3.0.0,<4.0.0"
hypercorn = "^0.17.3"

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"
